# Shira

./: .editorconfig  .gitignore  CMakeLists.txt
.github/workflows/: cmake-multi-platform.yml  linter.yml
cmake/: BuildEnvironment.cmake  CheckPackages.cmake  CommonConfig.cmake  GetPlatformInfo.cmake
src/: CMakeLists.txt
src/app/: CMakeLists.txt  appfactory.cpp  appfactory.h  main.cpp
src/app/internal/: guiapp.cpp  guiapp.h
src/appshell/: CMakeLists.txt  appshell.qrc  appshellmodule.cpp  appshellmodule.h
src/appshell/internal/: framelesswindowcontroller.cpp  framelesswindowcontroller.h
src/appshell/qml/: AppTitleBar.qml  AppWindow.qml  Main.qml  WindowContent.qml
src/appshell/view/: framelesswindowmodel.cpp  framelesswindowmodel.h  mainwindowtitleprovider.cpp  mainwindowtitleprovider.h
src/framework/: CMakeLists.txt
src/framework/actions/: CMakeLists.txt  actionsmodule.cpp  actionsmodule.h  actiontypes.h
src/framework/dockwindow/: CMakeLists.txt  dockmodule.cpp  dockmodule.h  docktypes.h  idockwindow.h
src/framework/dockwindow/internal/: dockbase.cpp  dockbase.h
src/framework/dockwindow/view/: dockcentralview.cpp  dockcentralview.h
src/framework/global/: CMakeLists.txt  baseapplication.cpp  baseapplication.h  containers.h  globalmodule.cpp  globalmodule.h  iapplication.h  iinteractive.h  log.h  translation.cpp  translation.h
src/framework/global/async/: asyncable.h
src/framework/global/internal/: baseapplication.cpp  baseapplication.h  interactive.cpp  interactive.h
src/framework/global/modularity/: context.h  funcinfo.h  imoduleinterface.h  imodulesetup.h  injectable.h  ioc.cpp  ioc.h  modulesioc.h
src/framework/global/types/: bytearray.cpp  bytearray.h  flags.h  string.cpp  string.h  translatablestring.h  version.cpp  version.h
src/framework/ui/: CMakeLists.txt  imainwindow.h  inavigation.h  iuiengine.h  uiaction.h  uimodule.cpp  uimodule.h
src/framework/ui/internal/: mainwindow.cpp  mainwindow.h  uiengine.cpp  uiengine.h
src/framework/ui/view/: abstractnavigation.cpp  abstractnavigation.h  mainwindowbridge.cpp  mainwindowbridge.h  navigationcontrol.h  navigationsection.h
src/framework/uicomponents/: CMakeLists.txt  uicomponentsmodule.cpp  uicomponentsmodule.h
src/framework/uicomponents/qml/: FlatButton.qml
src/framework/uicomponents/view/: abstractmenumodel.cpp  abstractmenumodel.h  abstracttoolbarmodel.cpp  abstracttoolbarmodel.h  dialogview.cpp  dialogview.h  dropdownview.cpp  dropdownview.h  iconview.cpp  iconview.h  menuitem.cpp  menuitem.h  menuview.cpp  menuview.h  popupview.cpp  (+7 more)
test/: CMakeLists.txt
(+8 files in other folders)
